--- a/src/whowins.html
+++ b/src/whowins.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Who Wins</title>
-<script type="text/javascript" src="whowins.js"></script>
-</head>
-<body>
-     
-</body>
+    <head>
+        <title>Who Wins</title>
+        <script src="js/jquery-2.1.4.js"></script>
+        <script src="js/parse-1.6.4.js"></script>
+
+        <script src="js/whowins.js"></script>
+    </head>
+    <body>
+        <br />Summoner Name
+        <br />
+     <!---   <input id="matchId" /> 
+        <input type="submit" onclick="matchLookUp();" />--->
+        <script>matchLookUp();</script>
+    </body>
 </html>
